# acume

./: .gitignore  CMakeLists.txt  GMSmoduleversion.cmake  acume-base-phoenix.spec  acume-base.spec  cubedefinition.xml  cubedefinition1.xml  pom.py  pom.xml
10/: X.MAPREDUCE.0.5.REMOVED.git-id  (+1 more)
cache/: .cache  .classpath  CMakeLists.txt  pom.xml  searchEgressPeerCubeDimension.orc  searchEgressPeerCubeMeasure.orc  xml
cache/2013/11/18/05/: DummyCubeMeasure.orc  SearchPRI_InteractionEgressDimension.orc  searchEgressCustCubeDimension.orc  searchPrefixIngressProsCubeDimension.orc
cache/classes/: acume.conf
cache/metastore_db/: db.lck  service.properties
cache/metastore_db/log/: log.ctrl
cache/src/main/java/com/guavus/acume/cache/dev/: DDev.java
cache/src/main/java/com/guavus/acume/cache/util/: Utility.java  ZoneInfo.java
cache/src/main/java/com/guavus/acume/cache/utility/: ACSelectItemVisitor.java  AbstractVisitor.java  ExtraInfo.java  Pair.java  QueryBinSourceWhereClauseVisitor.java  QueryExtraInfoWhereClauseVisitor.java  QueryFromClauseVisitor.java  QueryKeySingleEntityWhereClauseVisitor.java  QuerySelectClauseVisitor.java  QuerySingleKeySingleEntityWhereClauseVisitor.java  QueryWhereClauseVisitor.java  RequestType.java  SQLParserFactory.java  SQLTableGetter.java  SQLUtility.java  Tuple.java  Visitor.java  ZoneInfo.java
cache/src/main/java/com/guavus/acume/configuration/: AcumeConfiguration.java  ConfigurationValidator.java
cache/src/main/java/com/guavus/acume/dev/: DDev.java
cache/src/main/java/com/guavus/acume/util/: Utility.java  ZoneInfo.java
cache/src/main/resources/: cubedefinition.xml  cubedefinition.xsd  cubedefinition1.xml  cubedefinition1.xsd  cubedefinition2.xml  cubedefinition2.xsd  del  hive-site.xml  logback.xml
cache/src/main/scala/acume/exception/: AcumeException.scala
cache/src/main/scala/com/guavus/acume/annotator/: AnnotatorState.scala
cache/src/main/scala/com/guavus/acume/cache/: AcumeCache.scala  AcumeCacheFactory.scala  AcumeCacheType.scala  AcumeTreeCache.scala  EvictionDetails.scala  Interval.scala  Intervals.scala  TableRegistrator.scala  TimeGranularity.scala
cache/src/main/scala/com/guavus/acume/cache/annotator/: AnnotationTested.scala  Annotator.scala  AnnotatorState.scala
cache/src/main/scala/com/guavus/acume/cache/common/: AcumeCacheConf.scala  AcumeConstants.scala  CacheLevel.scala  Collection.scala  ConfConstants.scala  Cube.scala  CubeMeasure.scala  CubeORC.scala  DataType.scala  Dimension.scala  Field.scala  FieldType.scala  HbaseConfigs.scala  LevelTimestamp.scala  Measure.scala  MeasureTrait.scala  MeasureType.scala  NumericFunctionTrait.scala  QLType.scala
cache/src/main/scala/com/guavus/acume/cache/core/: AbstractCacheLevelPolicy.scala  AcumeCache.scala  AcumeCacheFactory.scala  AcumeCacheHolder.scala  AcumeCacheObserver.scala  AcumeCacheType.scala  AcumeCacheUtility.scala  AcumeFlatSchemaTreeCache.scala  AcumeStarSchemaTreeCache.scala  AcumeTreeCache.scala  AcumeTreeCacheValue.scala  AggregationLevel.scala  CacheIdentifier.scala  CacheLevelPolicyTrait.scala  CacheTimeSeriesLevelPolicy.scala  CacheTimeSeriesPolicyTrait.scala  EvictionDetails.scala  FixedLevelPolicy.scala  HashPartitionedFlatSchemaTreeCache.scala  Interval.scala  Intervals.scala  PartitionedFlatSchemaTreeCache.scala  SingleEntityAcumeTreeCache.scala  TableRegistrator.scala  TimeGranularity.scala  TmoCache.scala
cache/src/main/scala/com/guavus/acume/cache/eviction/: AcumeCacheEvictionObserver.scala  AcumeTreeCacheEvictionPolicy.scala  EvictionDetails.scala  EvictionPolicy.scala  VREvictionPolicy.scala
cache/src/main/scala/com/guavus/acume/cache/metadata/: MetadataCleaner.scala  MetadataLoader.scala  MetadataWorkload.scala
cache/src/main/scala/com/guavus/acume/common/: AcumeConstants.scala  CubeTrait.scala  QLType.scala
cache/src/main/scala/com/guavus/acume/core/: CacheConf.scala  Dimension.scala  MeasureType.scala  NumericFunctionTrait.scala
cache/src/main/scala/com/guavus/acume/launch/: AcumeLauncher.scala  Launcher.scala  SparkSubmitLauncher.scala
cache/src/main/scala/com/guavus/acume/threads/: NamedThreadPoolFactory.scala
cache/src/main/scala/com/guavus/acume/util/: QueryOptionalParam.scala  Utility12345.scala
cache/src/main/scala/com/guavus/acume/utility/: Log.scala  OrcImpl.scala  SQLHelper.scala  SQLValidator.scala  ThreadPool.scala
cache/src/main/scala/com/guavus/acume/workflow/: RequestHandler.scala  RequestType.scala
cache/src/main/scala/com/guavus/rubix/cache/: Interval.scala  Intervals.scala
cache/src/test/resources/: acume.cache.properties  acume.conf  acumemural.xml  cubedefinition.xml  del  muralinstacubedefinition.xml
war/: .classpath  .project  CMakeLists.txt  acume-solution.spec  pom.xml
war/src/main/resources/: acume.conf  acume.ini  acumeCliConfiguration.xml  distributed.cfg.xml  equinoxConfiguration.xml  log4j-executor.properties  log4j.xml  poolConfig.xml  qbConf.properties.template  shiro.ini  spark.properties  udfConfiguration.xml  udfConfiguration.xsd  um.sql  usermanagement.properties
war/src/main/tomcat/: keystore  server.jks
war/src/main/tomcat/conf/: server.xml
war/src/main/webapp/WEB-INF/: web.xml
(+495 files in other folders)
